<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Vortex</string>
    <string name="app_title">Time Vortex</string>
    <string name="app_subtitle">Navigating the history of <i>Doctor Who</i></string>

    <string name="listitem_title">1: An Unearthly Child/10,000 B.C.</string>
    <string name="listitem_seasoninfo">Season and episode info goes here</string>
    <string name="listitem_synopsis">A short description of the episode</string>
    <string name="listitem_castandcrew">Cast and crew info</string>
    <string name="listitem_checkbox_seenit">I\'ve seen this</string>
    <string name="listitem_checkbox_wanttoseeit">On my watchlist</string>
    <string name="listitem_checkbox_inmycollection">In my collection</string>


    <string name="mynotes_title_label">My notes</string>
    <string name="mynotes_edittext_hint">Take notes, or write your own review here!</string>
    <string name="textview_user_editable_fields_title">User-editable fields</string>

    <string name="textfield_userstarrating_label">My rating</string>
    <string name="txt_finditon">Find it on...</string>
    <string name="search_main_label">Find an episode</string>
    <string name="search_by_title_label">Search for a title</string>
    <string name="find_all_x_label">Find all appearances of...</string>
    <string name="search_by_title_button_label">Search</string>
    <string name="gotomainsearchlist_button_label">See All Episodes</string>
    <string name="gotosearchpage_button_label">Search Episodes</string>
    <string name="app_ui_explainer">Click a list item to see full version.</string>
    <string name="current_login_info">Current login info: Not logged in.</string>

    <string name="button_save_user_changeslabel">Save My Changes</string>
    <string name="button_return_to_list_label">Return To List</string>
    <string name="reset">Exterminate User Data</string>
    <string name="search_tvstories">Search Episodes</string>
    <string name="search_by_title_hint">Search by title</string>
    <string name="search_by_user_review_hint">Search the text of your user reviews</string>
    <string name="fullpagefragmenttitle">Episode Info</string>
    <string name="getrandom_button_label">Randomizer!</string>
    <string name="aboutdoctorwho_button_label">About Doctor Who</string>
    <string name="aboutdoctorwho_title">About Doctor Who</string>
    <string name="aboutdoctorwho_history_text">Text goes here.</string>
    <string name="aboutdoctorwho_beginnersrecommendations_text">Text goes here.</string>
    <string name="aboutdoctorwho_otherreading_text">Text goes here.</string>
    <string name="rankings_main_label">Text goes here.</string>

    <string name="bestof_button_label_bbcamerica">BBC Critics \nTop 10 2013</string>
    <string name="bestof_button_label_dwm2009">Doctor Who \nMagazine 2009</string>
    <string name="bestof_button_label_dwm2014">Doctor Who \nMagazine 2014</string>
    <string name="bestof_button_label_avctvc10">AV Club \n2013</string>
    <string name="bestof_button_label_io9">io9 \n2014</string>
    <string name="bestof_button_label_lmmyles">L.M. Myles \n2014</string>
    <string name="bestof_button_label_bahn">Time Vortex \nranking</string>
    <string name="textviewBestOfBBCAmerica">BBC Critics \nTop 10 2013</string>
    <string name="textviewBestOfDWM2009">Doctor Who \nMagazine 2009</string>
    <string name="textviewBestOfDWM2014">Doctor Who \nMagazine 2014</string>
    <string name="textviewBestOfAVCTVC10">AV Club \n2013</string>
    <string name="textviewBestOfIo9">io9 \n2014</string>
    <string name="textviewBestOfLMMyles">L.M. Myles \n2014</string>
    <string name="textviewBestOfBahn">Time Vortex \nranking</string>

    <string name="update">Update</string>
    <string name="search_results">Search Results</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_out">Signed Out</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>



    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="login_button_label">Login</string>
    <string name="loginText_tv">Returning user? Log in below.</string>
    <string name="sign_up_text">New user? Click here to sign up!</string>
    <string name="sign_up_instructions">Enter email and password to sign up! You will be able to customize your profile on your user page.</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="action_logout">Logout</string>

</resources>