<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/list_item_bg"
    android:descendantFocusability="blocksDescendants" >

    <LinearLayout
        android:id="@+id/image_on_left"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left">

        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:id="@+id/list_item_doctor_image"
            android:src="@drawable/doctor01"
            android:maxHeight="30px"
            android:maxWidth="30px"
            android:scaleType="fitStart"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left"
            />

        <ImageView
            android:layout_width="50px"
            android:layout_height="50px"
            android:id="@+id/list_item_story_image"
            android:src="@drawable/logodoctor01"
            android:maxHeight="30px"
            android:maxWidth="30px"
            android:scaleType="fitStart"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/list_item_image"
            />

    <RelativeLayout
        android:id="@+id/layout_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/list_item_story_image"
        >

        <!-- story title, and maybe also storyID -->
        <TextView
            android:id="@+id/txt_listitem_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/listitem_title"
            android:textColor="@color/headline"
            android:padding="1dp" />

        <!-- era, yearProduced, season, seasonStoryNumber, episode, episodeLength-->
        <TextView
            android:id="@+id/txt_listitem_seasoninfo"
            android:text="@string/listitem_seasoninfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_listitem_title"
            android:padding="1dp" />

        <!-- synopsis -->
        <TextView
            android:id="@+id/txt_listitem_synopsis"
            android:text="@string/listitem_synopsis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_listitem_seasoninfo"
            android:textStyle="italic"
            android:padding="1dp" />

        <!-- doctor, othercast, crew-->
        <TextView
            android:id="@+id/txt_listitem_castandcrew"
            android:text="@string/listitem_castandcrew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_listitem_synopsis"
            android:textStyle="bold"
            android:padding="1dp"
            />


        <LinearLayout
            android:id="@+id/layout_checkboxes"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_listitem_castandcrew"
            >

        <!-- seenIt? -->
        <CheckBox
            android:id="@+id/checkBox_listitem_seenit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listitem_checkbox_seenit"
            android:padding="1dp"
            />

        <!-- wantToSeeIt? -->
        <CheckBox
            android:id="@+id/checkBox_listitem_wanttoseeit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listitem_checkbox_wanttoseeit"
            android:layout_toRightOf="@+id/checkBox_listitem_seenit"
            android:padding="1dp"
            />
        </LinearLayout>

        <!-- user-generated star rating -->
        <RatingBar
            android:id="@+id/UserStarRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_checkboxes"
            android:padding="1dp"
            />


    </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/image_on_left"
        android:background="@color/view_divider_color" />

</RelativeLayout>